--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -606,4 +606,10 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="SplashScreenExcel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SplashScreenExcel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AboutMySQLForExcelVersion" xml:space="preserve">
+    <value>Version {0}</value>
+  </data>
+  <data name="AboutMySQLInstallerVersion" xml:space="preserve">
+    <value>MySQL Installer 1.2</value>
+  </data>
 </root>
