WorkItem 425 - Move logic that handles Table and Column values and warnings from Export Form to MySQLDataTable and MySQLDataColumn classes
- Moved logic that happened after setting values on table columns from the ExportDataForm to the MySQLDataColumn class, since it should have been encapsulated within the columns in the first place.  Added event handlers to notify about warnings generated/removed on columns to optionally inform users about values that could create errors when creating a new table. Added event handlers to notify when property values change. (source/Classes/MySQLDataColumn.cs, source/Forms/ExportDataForm.cs).
- Added properties to the MySQLDataTable class for advanced options set by users instead of being sent as parameters of the SetData method and updated the MySQLDataTable constructor to set these. Added WBConnection property so the connection data is not passed every time that operations are performed on the table and updated methods accordingly. Added event handlers to notify about warnings generated/removed on the table and event handlres to notify when a column's property value changes. (source/Classes/MySQLDataTable.cs)
- Added ValidateUserDataType method to move the logic from the ExportDataForm class. (source/Classes/Utilities.cs)
- Set the DesignerSerializationVisibility attribute of non-browsable properties to Hidden. (source/Controls/PreviewDataGridView.cs)
- Changed the MySQLDataTable constructor call on consumer objects. (source/Forms/AppendDataForm.cs, source/Forms/EditDataDialog.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 1.1.1
+- Moved logic that handles Table and Column values and warnings from Export Form (frontend) to MySQLDataTable and MySQLDataColumn classes (backend).
 - Added code to expand each of the connection group nodes after they are initialized with existing connections.
   (Bug #16238782 - REMOTE CONNECTIONS SHOULD BE EXPANDED ON THE WELCOME PANEL)
 - The context menu opened by right-clicking the preview grid in the Import Data Form is now showing context menu actions depending on the number of selected columns
