Bug #16486410 - EXPORT DATA - DATA TYPE COMBO BOX ACCEPTS INVALID DATA TYPES
- Added code to trim and remove spaces for proposed data types in the SetMySQLDataType method. (source/Classes/MySQLDataColumn.cs)
- Fixed code that assumed that anything wrapped in parenthesis in a data type is a number by adding a TryParse call in the StringValueCanBeStoredWithMySQLType method. Rebuilt the logic in the ValidateUserDataType method to return right away in any condition flagging the proposedUserType as invalid, added a check to flag type as invalid if any text is found after a right parenthesis or if any value within the parenthesis is not a number when it must be. (source/Classes/Utilities.cs)
- Changed the message text for an invalid data type since it was stating before that the data type is not a "recognized" data type where it could be a recognized type but with invalid length. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx).

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -299,7 +299,7 @@
     <value>..\Resources\MySQLforExcel-Input-64x64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="ExportDataTypeNotValidWarning" xml:space="preserve">
-    <value>Entered Data Type is not a MySQL recognized data type.</value>
+    <value>Entered Data Type is not a MySQL valid data type.</value>
   </data>
   <data name="MySQLforExcel_Cursor_Dragging_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MySQLforExcel-Cursor-Dragging-32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
