Bug #16487827 - EDIT DATA - EDIT DATA ON TABLES THAT NO LONGER EXISTS THROWS UNHANDLED EXCEPTION
- Wrapped the code that runs the edit data action when the action label is clicked in a try-catch block that is consistent with how errors are shown by the import data action. Changed how the error title and details are shown in the append and edit data actions to be consistent with the import data one. (source/Panels/DBObjectSelectionPanel.cs)
- Added resource strings for generic error titles for the append data and edit data actions. (source/Properties/Resources.Designer.cs, source/Properties/Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -615,4 +615,10 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="ColumnExistsWarning" xml:space="preserve">
     <value>Another column with this name already exists in the table.</value>
   </data>
+  <data name="AppendDataErrorTitle" xml:space="preserve">
+    <value>Error appending data</value>
+  </data>
+  <data name="EditDataErrorTitle" xml:space="preserve">
+    <value>Error editing data</value>
+  </data>
 </root>
