Bug #16392862 - CONNECTIONS LIST FLICKERS WHEN A CONNECTION IS DELETED OR ADDED
- Added code to prevent the connections, schemas and DB objects lists from drawing while they are being filled with items. (source/Panels/DBObjectSelectionPanel.cs, source/Panels/SchemaSelectionPanel.cs, source/Panels/WelcomePanel.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.1.1
+- Added code to prevent the connections, schemas and DB objects lists from drawing while they are being filled with items.
+  (Bug #16392862 - CONNECTIONS LIST FLICKERS WHEN A CONNECTION IS DELETED OR ADDED)
 - Added performance_schema to the list of system schemas, so now it shows along with the mysql and information_schema schemas list.
   (Bug #16473033 - PERFORMANCE_SCHEMA NOT LISTED UNDER "SYSTEM SCHEMAS" GROUP)
 - Added code that converts numbers to invariant culture strings when building the SQL statements used to push queries to the MySQL Server.
