Bug #16495493 - EXPORT DATA - DATA TYPE FOR EMPTY COLUMNS IS NOT AUTO-DETECTED
- Added the IsEmpty property to the MySQLDataColumn class to flag empty columns when Excel data is populated in the table and columns are created based on that data. (source/Classes/MySQLDataColumn.cs)
- Modified the CreateColumns method to populate the new IsEmpty property in each column based on the Excel data manipulated in the SetData method. (source/Classes/MySQLDataTable.cs)
- Fixed logic in the DetectTypes method that detects data types for columns to check for empty columns instead of excluded ones and properly assigning the default generic data type of varchar(255) to empty columns as per design. (source/Classes/MySQLDataTable.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 1.1.1
+- Fixed logic that detects data types for columns to check for empty columns instead of excluded ones and properly assigning the default generic data type of
+  varchar(255) to empty columns as per design. (Bug #16495493 - EXPORT DATA - DATA TYPE FOR EMPTY COLUMNS IS NOT AUTO-DETECTED)
 - Fixed code that detected data types for columns for the scenario where only 1 row of Excel data is selected for Export or for Append, in which case the data
   type was always being set as a varchar(255) which is used when data types between rows are not consistent. (Bug #16493139 - AUTOMATIC MAPPING NOT WORKING)
 - Added a parameter to the LoadConnections method that refreshes connections from its corresponding file, set to true when the the Refresh Connections action
