--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.1
+- Added code to clear the format of a target Excel range where MySQL data is to be imported to before copying the values to the Excel range so the format applied
+  to the Excel cells from a previous import operation does not corrupt the format of newly imported data.
+  (Bug #16495155 - DATA GETS CORRUPTED WHEN CELL FORMAT IS DIFFERENT THAN DATA EXPORTED)
 - Fixed logic that detects data types for columns to check for empty columns instead of excluded ones and properly assigning the default generic data type of
   varchar(255) to empty columns as per design. (Bug #16495493 - EXPORT DATA - DATA TYPE FOR EMPTY COLUMNS IS NOT AUTO-DETECTED)
 - Fixed code that detected data types for columns for the scenario where only 1 row of Excel data is selected for Export or for Append, in which case the data
