Bug #16495151 - EXPORT TABLE LINK IS NOT DISABLED WHEN DATA IS DELETED
- Moved the NativeWindowWrapper class from source/Controls/TaskPaneControl.cs to its own file. (source/Classes/NativeWindowWrapper.cs, source/MySQL.ForExcel.csproj).
- Extracted the logic that checks if an Excel range has any data and placed in the new ExcelRangeContainsAnyData method, so this gets called by the ExcelApplication_SheetSelectionChange event delegate method and also by the new ExcelApplication_SheetChange method fired when the contents of the current Excel selection change, so if the contents become empty the Append and Export data action labels get disabled. (source/Controls/TaskPaneControl.cs).

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.1.1
+- Added code to check for changes on the contents of the currently selected Excel cells, so if the contents become empty the Export and Append data actions are
+  disabled in the same way as they are disabled when a new cells selection is made and they contain no data.
+  (Bug #16495151 - EXPORT TABLE LINK IS NOT DISABLED WHEN DATA IS DELETED)
 - Added code to clear the format of a target Excel range where MySQL data is to be imported to before copying the values to the Excel range so the format applied
   to the Excel cells from a previous import operation does not corrupt the format of newly imported data.
   (Bug #16495155 - DATA GETS CORRUPTED WHEN CELL FORMAT IS DIFFERENT THAN DATA EXPORTED)
