--- a/Installer/README
+++ b/Installer/README
@@ -1,4 +1,4 @@
-MySQL for Excel 1.0
+MySQL for Excel 1.1
 
 This is a release of MySQL for Excel, Oracle's dual-
 license utility addin for Microsoft Excel.  For the avoidance of
@@ -6,7 +6,7 @@ doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
 MySQL for Excel is brought to you by Oracle.
 
-Copyright (c) 2012, Oracle and/or its affiliates. All rights reserved.
+Copyright (c) 2012-2013, Oracle and/or its affiliates. All rights reserved.
 
 License information can be found in the COPYING file.
 
